codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__auto_every_cron_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8570
expression: blob
---
• Created automation session:auto-1. Cron schedules use your local timezone. Session scope only. It will disappear when this conversation ends.
