codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__auto_every_interval_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8554
expression: blob
---
• Created automation session:auto-1. Seconds are rounded up to the nearest minute. Using 1m. Session scope only. It will disappear when this conversation ends.
