codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__autoresearch_status_research_portfolio.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalized
---
Autoresearch
Status: running
Mode: research
Goal: discover robust OCR strategies
Session: ocr research
Metric: cer
Iterations: 0
Runs in current segment: 2
Discovery passes: 0
Portfolio: 2 candidates across 2 families
Baseline: 4.7000
Best: 4.7000
Kept: 1
Discarded: 1
Crashes: 0
Checks failed: 0
Workdir: /tmp/workdir
Max runs: 12
Selection policy: weak_gap=8 stagnation_window=3 synthesis_after=2
Portfolio refresh policy: min_families=3 low_diversity_cycles=2 exploit_cycles=5 cooldown=300s
Portfolio refresh status: waiting for 2 more exploit cycles via low-diversity (0 / 2, families=2)
Validation policy: promising_keeps=1 winner_keeps=2 holdout_before_winner=no adversarial_before_winner=no evaluator_audit_before_winner=no
Active approach: approach-1 [distillation]
Approach title: Teacher-student OCR
Validation state: `approach-1` has 1 keep run(s); pending: needs at least 2 keep run(s) before it can be marked winner
Status message: Autoresearch started.
Approach approach-1: Teacher-student OCR [distillation] status=active best=4.7000
Approach approach-2: Retrieval-augmented decoder [retrieval] status=promising best=n/a
