codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__autoresearch_status_staged_targets.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalized
---
Autoresearch
Status: running
Goal: optimize latency
Session: latency
Metric: latency_ms
Iterations: 0
Runs in current segment: 1
Discovery passes: 0
Baseline: 480
Best: 480
Kept: 1
Discarded: 0
Crashes: 0
Checks failed: 0
Workdir: /tmp/workdir
Staged targets: 1/2 reached
Active stage: 2/2 latency_ms <= 400 ms
Max runs: 8
Status message: Autoresearch started.
