codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__autoresearch_usage_history.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 9756
expression: rendered
---
Autoresearch
Run an autonomous benchmark loop with native benchmark logging tools.

Usage:
$autoresearch init <request>
$autoresearch start [--max-runs <count>] <goal>
$autoresearch <goal>
$autoresearch status
$autoresearch pause
$autoresearch resume
$autoresearch wrap-up
$autoresearch stop
$autoresearch clear

Examples:
$autoresearch init "Create an OCR project with CER < 5% on dataset X"
$autoresearch optimize unit test runtime without changing semantics
$autoresearch start --max-runs 50 reduce benchmark wall clock time
$autoresearch wrap-up
